--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
  */
 
  @import url("https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.css");
+ @import "components/index";
+
+ h1{
+  margin:12px;
+ }
