--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<!-- Header avec la courbe -->
 <div class="relative bg-black">
   <div id="map" class="w-full h-64"></div>
   <div class="absolute top-52 left-1/2 transform -translate-x-1/2">
@@ -7,7 +6,7 @@
 </div>
 
 <!-- Profil utilisateur -->
-<div class="text-center mt-16 bg-black">
+<div class="text-center mt-16 ">
   <h1 class="text-xl text-white font-bold">Firstname LASTNAME</h1>
   <p class="text-sm text-gray-300">Traveller type</p>
   <div class="flex justify-center items-center mt-2">
@@ -19,12 +18,11 @@
   </div>
 </div>
 
-<!-- Bouton "Ajouter un voyage" -->
 <div class="text-center mt-6">
   <button class="bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700">Ajouter un voyage</button>
 </div>
 
-<div class="relative bg-black text-white flex">
+<div class="relative text-white flex">
   <!-- Timeline et contenu -->
   <div class="relative flex-1 flex flex-col gap-2 p-6">
     <!-- Ligne verticale de la timeline -->
@@ -34,7 +32,7 @@
     <div class="flex items-center space-x-2">
       <!-- Point de la timeline -->
       <div class="relative z-10 flex-shrink-0">
-        <div class="w-3 h-3 bg-black border-white border-2 rounded-full"></div>
+        <div class="w-3 h-3  border-white border-2 rounded-full"></div>
       </div>
 
       <!-- Contenu de la carte -->
@@ -43,7 +41,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/5 to-transparent"></div>
 
         <!-- Texte de l'image -->
-        <div class="absolute inset-0 bg-black bg-opacity-40 flex flex-col justify-center p-4">
+        <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
           <p class="text-white italic text-sm mb-2">Du 23/04/2024 au 01/05/2024</p>
           <h2 class="text-white font-bold text-lg">NEW YORK 2024</h2>
           <p class="text-white italic text-xs">Avec Jocelyne</p>
@@ -75,7 +73,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
 
         <!-- Texte de l'image -->
-        <div class="absolute inset-0 bg-black bg-opacity-40 flex flex-col justify-center p-4">
+        <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
           <p class="text-white italic text-sm mb-2">Du 19/12/2019 au 01/01/2020</p>
           <h2 class="text-white font-bold text-lg">MONTREAL 2019</h2>
           <p class="text-white italic text-xs">Avec Michel et Thierry</p>
@@ -97,6 +95,17 @@
   </div>
 </div>
 
+<style>
+.mesh-gradient-dark {
+  background-color: rgb(241, 245, 249);
+  background-image: radial-gradient(at 23% 87%, rgb(15, 23, 42) 0, transparent 73%),
+                    radial-gradient(at 60% 62%, rgb(30, 41, 59) 0, transparent 96%),
+                    radial-gradient(at 79% 10%, rgb(30, 41, 59) 0, transparent 78%),
+                    radial-gradient(at 24% 8%, rgb(12, 74, 110) 0, transparent 100%),
+                    radial-gradient(at 21% 23%, rgb(15, 23, 42) 0, transparent 42%),
+                    radial-gradient(at 32% 41%, rgb(15, 23, 42) 0, transparent 46%);
+}
+</style>
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
