date form improvments

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -74,7 +74,7 @@
 </div>
 </div>
   <!-- Vue agenda -->
-  <div data-toggle-target="agendaView" class="hidden h-full flex items-center justify-center">
+  <div data-toggle-target="agendaView" class="hidden h-full items-center justify-center">
     <p class="text-xl font-semibold text-gray-700">Vue Agenda à venir</p>
   </div>
 </div>
