--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="text-center mt-6">
-  <button class="bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700">Ajouter un voyage</button>
+  <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm hover:bg-orange-700" %>
 </div>
 
 <div class="relative text-white flex">
