--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,32 +1,13 @@
-<div id="screen-container" class="relative flex justify-center h-screen overflow-hidden" data-controller="add-trip-animation">
+<div id="screen-container" class="relative h-screen overflow-hidden" data-controller="add-trip-animation">
   <div class="absolute inset-0 animate-gradient mesh-gradient-dark opacity-70"></div>
 
-  <div class="relative flex flex-col w-full mb-5 h-100vh">
-    <div id="title-part" data-add-trip-animation-target="titlePart" class="h-28 mb-4 flex justify-start w-full">
-      <p id="typewriter-text" data-add-trip-animation-target="text" class="relative w-full px-3 text-white text-2xl font-semibold"></p>
-    </div>
-    <div id="pulse-button" data-add-trip-animation-target="pulseButton" class="absolute transition-opacity duration-1000 animate-pulse-slow flex justify-center items-center bottom-10 w-full">
-      <div class="w-16 h-16 halo animate-gradient mesh-gradient-orange rounded-full"></div>
-    </div>
+  <div id="pulse-button" data-add-trip-animation-target="pulseButton" class="absolute transition-opacity duration-1000 animate-pulse-slow flex justify-center items-center bottom-10 w-full">
+    <div class="w-16 h-16 halo animate-gradient mesh-gradient-orange rounded-full"></div>
   </div>
 
-  <div id="calendar-part" data-add-trip-animation-target="calendarPart" class="absolute opacity-0 transition-opacity inset-0 flex flex-col p-4 mt-32">
-    <div class="flex gap-3" id="navbar">
-      <button class="text-sm font-medium text-white bg-white bg-opacity-25 px-4 py-2">Select dates</button>
-      <button class="text-sm font-medium text-white border px-4 py-2">Who</button>
-      <button class="text-sm font-medium text-white border px-4 py-2">Where</button>
-    </div>
-    <p class="mt-8 text-lg font-medium text-white">Step 1:</p>
-    <p class="text-xl font-semibold text-white">Choose the dates of the trip:</p>
-
-    <%= simple_form_for @trip, url: trips_path do |f| %>
-      <div id="calendar" data-controller="datepicker" class="w-full"></div>
-      <%= f.hidden_field :start_date, id: "start-date" %>
-      <%= f.hidden_field :end_date, id: "end-date" %>
-      <div class="flex justify-center mt-6">
-        <%= f.button :submit, "Save Dates", class: "bg-opacity-50 text-sm font-medium text-white border px-4 py-2 hover:bg-white" %>
-      </div>
-    <% end %>
-
+  <div id="title-part" data-add-trip-animation-target="titlePart" class="relative min-h-28 flex items-start w-full">
+    <p id="typewriter-text" data-add-trip-animation-target="text" class="px-3 text-white text-2xl font-semibold"></p>
   </div>
+
+  <%= render 'form_dates' %>
 </div>
